# chirp

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  SETUP.md  build_vs.sh
.github/workflows/: ci.yml
configs/: uniflash_flash_settings.json  uniflash_iwr6843aop_serial.ccxml  uniflash_iwr6843aop_uart.ccxml  uniflash_settings.json
configs/chirp_profiles/: vital_signs_2m.cfg
docker/: .dockerignore  Dockerfile  README.md  chirp  docker-compose.yml
docker/scripts/: build.sh  clean.sh
docs/: API_REFERENCE.md  GETTING_STARTED.md  HARDWARE_SETUP.md  INTEGRATION_GUIDE.md  OPTIMIZATION_ANALYSIS.md  TLV_SPECIFICATION.md  UART_DMA_INVESTIGATION.md  custom_tlv_spec.md
firmware/: Makefile  mmw_res.h  radarss
firmware/dss/: dss_main.c  mmw_dss.cfg  mmw_dss.h  mmw_dss.mak  mmw_dss_linker.cmd
firmware/include/: mmw_config.h  mmw_output.h
firmware/mss/: mmw_cli.c  mmw_lvds_stream.c  mmw_lvds_stream.h  mmw_mss.cfg  mmw_mss.h  mmw_mss.mak  mmw_mss_linker.cmd  mss_main.c
firmware/src/: chirp.c  chirp.h  chirp_cli.c  chirp_cli.h  config_persist.c  config_persist.h  error_codes.c  error_codes.h  firmware_config.h  motion_detect.c  motion_detect.h  output_modes.c  output_modes.h  phase_extract.c  phase_extract.h  power_mode.c  power_mode.h  (+5 more)
host-sdk/python/: README.md  parse_custom_tlv.py  pyproject.toml
host-sdk/python/chirp/: __init__.py  parser.py  tlv.py
host-sdk/python/examples/: stream_phase.py
profiles/: README.md  development.cfg  high_rate.cfg  low_bandwidth.cfg  low_power.cfg  vital_signs.cfg
scripts/: cli_serial.py  live_objects.py  parse_vitalsigns.py  read_data.py  send_cfg.sh  test_vitalsigns.sh  vs_monitor.py
toolchains/: env.sh.template
(+34 files in other folders)
